fixed img-wrap so it is centered

--- a/DELETED/assets/css/DELETED.css
+++ b/DELETED/assets/css/DELETED.css
@@ -356,7 +356,6 @@ h1 {
     transform: rotate(39deg);
     height: auto;
     margin-top: 2rem;
-    margin-left: -1.8rem;
     z-index: 1;
 }
 
